--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,7 +29,7 @@
         </a>
       </div>
     </div>
-    <div class="col-md-8">
+    <div class="col-md-8" [@detailsFromLeft]="detailsAnimationState" (@detailsFromLeft.done)="detailsFromLeftAnimationComplete()" >
       <div *ngIf="selectedQuiz">
         <br>
         <button 
